[tool.poetry]
name = "numba-astar"
version = "0.1"
description = "Numba implementation of the A* algorithm"
license = "BSD"
authors = ["Shunichiro Sugiyama <osg273.w98@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ppdr/numba-astar"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python",
]
packages = [
    { include = "numba-astar" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
sortedcontainers = ">=2.4.0"

[tool.poetry.dev-dependencies]
black = ">=23.3.0"
pytest = ">=7.2.0"
mypy = ">=0.991"
twine = ">=4.0.2"
